--- a/scss/style/variables.scss
+++ b/scss/style/variables.scss
@@ -24,6 +24,7 @@ $brand-info:            rgba(181,133,133,1) !default; //#b58585 minutes clock co
 $brand-warning:         rgba(248,90,68,1) !default; //#f85a44 input error
 $brand-danger:          rgba(107,11,11,1) !default; //#6b0b0b top clock bg
 $brand-safe:            rgba(193,105,105,1) !default; //#c16969 up down buttons border
+$brand-current:         rgba(118,16,2,1) !default; //#761002 current date bg
 
 
 $brand-bull:            rgba(255,16,16,1); //#ff1010 hamburger bg
