--- a/scss/style/variables.scss
+++ b/scss/style/variables.scss
@@ -10,7 +10,7 @@ $font-weight-seldom:       700;
 
 // COLOR
 
-$gray-base:             rgba(0,0,0,1) !default;
+$gray-base:             rgba(0,0,0,1) !default; //#000
 $gray-darker:           rgba(188,188,188,1) !default; // #bcbcbc textare progress line bg
 $gray-dark:             rgba(177,154,145,1) !default;  //#b19a91 input border active
 $gray:                  rgba(95,103,106,1) !default; //#5f676a input border not active
