--- a/css/style.css
+++ b/css/style.css
@@ -597,6 +597,97 @@
   border: none;
 }
 
+@font-face {
+  font-family: 'fontello';
+  src: url("../fonts/fontello.eot?41866892");
+  src: url(".../fonts/fontello.eot?41866892#iefix") format("embedded-opentype"), url("../fonts/fontello.woff?41866892") format("woff"), url("../fonts/fontello.ttf?41866892") format("truetype"), url("../fonts/fontello.svg?41866892#fontello") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?41866892#fontello') format('svg');
+  }
+}
+*/
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  text-align: center;
+  /* opacity: .8; */
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-vkontakte:before {
+  content: '\e800';
+}
+
+.icon-tumblr:before {
+  content: '\e801';
+}
+
+.icon-facebook:before {
+  content: '\e802';
+}
+
+.icon-mail-alt:before {
+  content: '\e803';
+}
+
+.icon-heart:before {
+  content: '\e804';
+}
+
+.icon-star:before {
+  content: '\e805';
+}
+
+.icon-user:before {
+  content: '\e806';
+}
+
+.icon-cancel:before {
+  content: '\e807';
+}
+
+.icon-videocam:before {
+  content: '\e808';
+}
+
+.icon-camera:before {
+  content: '\e809';
+}
+
+.icon-download-cloud:before {
+  content: '\e80a';
+}
+
+.icon-upload-cloud:before {
+  content: '\e80b';
+}
+
+.icon-bell-alt:before {
+  content: '\e80c';
+}
+
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -969,30 +1060,19 @@ body {
 
 .form__current--top {
   position: absolute;
-  right: -13px;
-  top: -35px;
+  right: -15px;
+  top: -42px;
   display: block;
-  width: 27px;
-  height: 27px;
-  border-radius: 50%;
-  background-color: #f85a44;
+  width: 30px;
+  height: 37px;
+  background: url(../images/sprite.png) 30px 0;
   text-align: center;
-  padding-top: 5px;
-  padding-left: 1px;
+  padding-top: 8px;
+  padding-left: 2px;
   font-size: 10px;
   font-family: "Roboto";
   font-weight: 500;
   color: black;
-}
-
-.form__current--top:after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border-left: 13px solid transparent;
-  border-right: 12px solid transparent;
-  border-top: 15px solid #f85a44;
 }
 
 .form__counters {
@@ -1123,7 +1203,7 @@ body {
 
 .popup {
   display: none;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8);
   color: #ff1010;
   padding-top: 70px;
   padding-right: 100px;
@@ -1192,6 +1272,255 @@ body {
   margin-left: 32px;
 }
 
+.clock {
+  text-align: center;
+  width: 595px;
+  overflow: hidden;
+}
+
+.clock__analog {
+  background-color: #933e3e;
+  padding-top: 30px;
+  padding-bottom: 0;
+}
+
+.clock__analog-holder {
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  background-color: #9d4f4f;
+  margin: 0 auto;
+}
+
+.clock__analog-time {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background: url(../images/sprite.png) 25px 23px no-repeat;
+  background-size: cover;
+}
+
+.clock__analog-time:hover .clock__analog-hour,
+.clock__analog-time:focus .clock__analog-hour {
+  opacity: 1;
+}
+
+.clock__analog-time:hover .clock__analog-hour:before,
+.clock__analog-time:focus .clock__analog-hour:before {
+  opacity: 1;
+}
+
+.clock__analog-hour {
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 50%;
+  left: 37%;
+  margin: 0px 0px 5px -18%;
+  padding: 0px 11px 2px 29%;
+  -webkit-transform-origin: 100% 50%;
+  -ms-transform-origin: 100% 50%;
+  transform-origin: 100% 50%;
+  border-radius: 4px 0 0 4px;
+  background-color: #6b0b0b;
+  opacity: 0;
+}
+
+.clock__analog-hour:before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: -40px;
+  top: -18px;
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out;
+  background-color: #6b0b0b;
+}
+
+.clock__analog-meridiem {
+  font-family: "Roboto";
+  font-weight: 500;
+  color: black;
+  padding-top: 20px;
+  padding-right: 17px;
+  padding-bottom: 20px;
+  padding-left: 17px;
+  font-size: 20px;
+  display: inline-block;
+  border-radius: 50%;
+  color: white;
+}
+
+.clock__analog-meridiem-holder {
+  clear: both;
+  overflow: hidden;
+}
+
+.clock__analog-meridiem--active {
+  background-color: #6b0b0b;
+}
+
+.clock__analog-am {
+  float: left;
+  margin-right: 0;
+  margin-left: 50px;
+}
+
+.clock__analog-pm {
+  float: right;
+  margin-right: 50px;
+  margin-left: 0;
+}
+
+.clock__digital {
+  font-size: 80px;
+  padding-top: 31px;
+  padding-right: 0;
+  padding-bottom: 33px;
+  padding-left: 0;
+  background-color: #6b0b0b;
+}
+
+.clock__digital-devider {
+  -webkit-animation: mymove 1s ease infinite;
+  animation: mymove 1s ease infinite;
+}
+
+.clock__digital-meridiem {
+  font-size: 30px;
+  margin-right: 0;
+  margin-left: -10px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.clock__digital-minutes {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+/* CLOCK DEVIDER ANIMATION */
+@-webkit-keyframes mymove {
+  0% {
+    opacity: 1.0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1.0;
+  }
+}
+
+.menu {
+  position: fixed;
+  right: -595px;
+  top: 0;
+  z-index: 1070;
+}
+
+.menu.menu--open {
+  right: 0px;
+}
+
+.menu__icons {
+  width: 96px;
+  float: left;
+  margin-top: 160px;
+  margin-bottom: 0;
+}
+
+.menu__icons-hamburger {
+  position: relative;
+  height: 63px;
+}
+
+.menu__icons-hamburger-holder {
+  background-color: #ff1010;
+  padding-top: 20px;
+  padding-right: 10px;
+  padding-bottom: 22px;
+  padding-left: 10px;
+}
+
+.menu__icons-hamburger span {
+  display: block;
+  position: absolute;
+  height: 7px;
+  width: 100%;
+  background: white;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+          transition: .25s ease-in-out;
+}
+
+.menu__icons-hamburger span:nth-child(1) {
+  top: 0;
+}
+
+.menu__icons-hamburger span:nth-child(2) {
+  left: 0;
+  top: 12px;
+}
+
+.menu__icons-hamburger span:nth-child(3) {
+  left: 0;
+  top: 24px;
+}
+
+.menu__icons-hamburger span:nth-child(4) {
+  top: 36px;
+}
+
+.menu__icons-hamburger.hamburger-open span:nth-child(1) {
+  top: 28px;
+  -webkit-transform: rotate(135deg);
+      -ms-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+.menu__icons-hamburger.hamburger-open span:nth-child(2) {
+  left: -60px;
+  opacity: 0;
+}
+
+.menu__icons-hamburger.hamburger-open span:nth-child(3) {
+  left: -60px;
+  opacity: 0;
+}
+
+.menu__icons-hamburger.hamburger-open span:nth-child(4) {
+  top: 28px;
+  -webkit-transform: rotate(-135deg);
+      -ms-transform: rotate(-135deg);
+          transform: rotate(-135deg);
+}
+
+.menu__icons-item {
+  font-size: 36px;
+  text-align: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+.menu__icons-facebook {
+  background-color: #4810ff;
+}
+
+.menu__icons-heart {
+  background-color: #2a0c8a;
+}
+
+.menu__icons-mail {
+  background-color: #0787ff;
+}
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -1228,6 +1557,14 @@ body {
   .main__form {
     width: 45%;
   }
+  .main__content {
+    position: relative;
+    left: 0;
+  }
+  .main__content--move {
+    position: relative;
+    left: -595px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1236,21 +1573,21 @@ body {
   }
   .date-now {
     padding-top: 47px;
-    padding-right: 35px;
+    padding-right: 45px;
     padding-bottom: 56px;
-    padding-left: 35px;
+    padding-left: 45px;
   }
   .main__calendar {
     display: inline-block;
     vertical-align: middle;
-    width: 59%;
+    width: 60%;
   }
   .main__form {
     display: inline-block;
     vertical-align: middle;
     width: 34%;
     margin-right: 0;
-    margin-left: 75px;
+    margin-left: 60px;
   }
 }
 
