--- a/scss/style/variables.scss
+++ b/scss/style/variables.scss
@@ -2,10 +2,10 @@
 
 $font-family-main:		'Roboto';
 
-$font-weight-main:         400;
-$font-weight-ofthen:       300;
-$font-weight-rare:         500;
-$font-weight-seldom:       700;
+$font-weight-main:         400; //regular
+$font-weight-ofthen:       300; //light
+$font-weight-rare:         500; //medium
+$font-weight-seldom:       700; //bold
 
 
 // COLOR
@@ -25,9 +25,10 @@ $brand-warning:         rgba(248,90,68,1) !default; //#f85a44 input error
 $brand-danger:          rgba(107,11,11,1) !default; //#6b0b0b top clock bg
 $brand-safe:            rgba(193,105,105,1) !default; //#c16969 up down buttons border
 $brand-current:         rgba(118,16,2,1) !default; //#761002 current date bg
-
+$brand-cream:           rgba(255,255,255,0.5) !default; //minutes and am/pm of digital clock
+$brand-milk:           	rgba(255,255,255,0.8) !default; //bg popup
 
 $brand-bull:            rgba(255,16,16,1); //#ff1010 hamburger bg
-$brand-floor:           rgba(72,16,255,1); //#4810ff letter-top bg
+$brand-floor:           rgba(72,16,255,1); //#4810ff facebook bg
 $brand-dram:            rgba(42,12,138,1); //#2a0c8a heart bg
-$brand-good:            rgba(7,135,255,1); //#0787ff letter-bottom bg
+$brand-good:            rgba(7,135,255,1); //#0787ff letter bg
