--- a/css/style.css
+++ b/css/style.css
@@ -939,6 +939,33 @@ body {
   padding-bottom: 120px;
 }
 
+.main__img {
+  position: relative;
+  margin: 0 auto;
+}
+
+.main__img-santa {
+  width: 760px;
+  position: absolute;
+  left: -245px;
+  top: -450px;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.main__img-merry-xmas {
+  width: 1000px;
+  margin-top: 105px;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-left: auto;
+}
+
+.main__content {
+  z-index: 1200;
+}
+
 .form-holder {
   background: rgba(0, 0, 0, 0.8);
   padding-top: 20px;
@@ -1106,6 +1133,7 @@ body {
   border-radius: 50%;
   cursor: default;
   height: 67px;
+  z-index: 0;
 }
 
 .datepicker--cell.-selected-,
@@ -1202,7 +1230,6 @@ body {
 }
 
 .popup {
-  display: none;
   background-color: rgba(255, 255, 255, 0.8);
   color: #ff1010;
   padding-top: 70px;
@@ -1211,6 +1238,23 @@ body {
   padding-left: 100px;
   width: 980px;
   margin: 0 auto;
+}
+
+.popup-holder {
+  display: none;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.popup-holder--show {
+  display: block;
+  opacity: 1;
 }
 
 .popup__img {
@@ -1419,7 +1463,7 @@ body {
   position: fixed;
   right: -595px;
   top: 0;
-  z-index: 1070;
+  z-index: 1030;
 }
 
 .menu.menu--open {
@@ -1435,7 +1479,7 @@ body {
 
 .menu__icons-hamburger {
   position: relative;
-  height: 63px;
+  height: 51px;
 }
 
 .menu__icons-hamburger-holder {
@@ -1479,7 +1523,7 @@ body {
 }
 
 .menu__icons-hamburger.hamburger-open span:nth-child(1) {
-  top: 28px;
+  top: 20px;
   -webkit-transform: rotate(135deg);
       -ms-transform: rotate(135deg);
           transform: rotate(135deg);
@@ -1496,7 +1540,7 @@ body {
 }
 
 .menu__icons-hamburger.hamburger-open span:nth-child(4) {
-  top: 28px;
+  top: 20px;
   -webkit-transform: rotate(-135deg);
       -ms-transform: rotate(-135deg);
           transform: rotate(-135deg);
@@ -1519,6 +1563,16 @@ body {
 
 .menu__icons-mail {
   background-color: #0787ff;
+}
+
+.menu-holder--open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1030;
 }
 
 @media (min-width: 768px) {
