--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,8 @@ body{
 	background-image: url(../images/bg.png);
 }
 
+
+
 .container{
 
 	width:auto;
@@ -44,6 +46,33 @@ body{
 	
 	@include padding-vertical(160px, 120px);
 	
+	
+	&__img{
+		
+		position: relative;
+		margin: 0 auto;
+
+		&-santa{
+
+			width: 760px;
+			position: absolute;
+			left: -245px;
+    		top: -450px;
+		    transform: rotate(-45deg);
+		    
+		}
+
+		&-merry-xmas{
+
+			width: 1000px;
+			@include margin-custom(105px, auto, 0, auto);
+		}
+	}
+
+	&__content{
+		
+		z-index:1200;
+	}
 	
 	
 }
@@ -231,6 +260,7 @@ body{
 		border-radius: 50%;
 		cursor: default;
 		height:67px;
+		z-index:0;
 
 		&.-selected-,
 		&.-focus-{
@@ -350,12 +380,33 @@ body{
 // POPUP
 
 .popup{
-	display: none;//temporary
+	
 	background-color: $brand-milk;
 	color: $brand-bull;
 	@include padding-custom(70px, 100px, 45px, 100px);
 	width: 980px;
 	margin:0 auto;
+	
+	&-holder{
+
+		display: none;//temporary
+		opacity:0;
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index:$zindex-modal;
+		background-color: $brand-cave;
+		
+	    
+	    &--show{
+
+	    	
+		    display: block;
+		    opacity:1;
+	    }
+	}
 	
 	&__img{
 
@@ -404,8 +455,6 @@ body{
 			
 		}
 	}
-
-	
 		
 	&__newyear{
 			
@@ -419,6 +468,8 @@ body{
 		@include margin-horizontal(0,32px);
 		
 	}
+
+
 	
 }
 
@@ -618,7 +669,7 @@ body{
 	position: fixed;
     right: -595px;
     top: 0;
-    z-index:$zindex-tooltip;
+    z-index:$zindex-navbar-fixed;
     
     &.menu--open{
     	right: 0px;
@@ -635,7 +686,7 @@ body{
 
 			position: relative;
 			
-			height: 63px;
+			height: 51px;
 			
 			
 			&-holder{
@@ -681,7 +732,7 @@ body{
 				span{
 					
 					&:nth-child(1){
-						top:28px;
+						top:20px;
   						transform: rotate(135deg);
 					}
 
@@ -696,7 +747,7 @@ body{
 					}
 
 					&:nth-child(4){
-						top:28px;
+						top:20px;
   						transform: rotate(-135deg);
 					}
 				}
@@ -720,6 +771,22 @@ body{
 
 		&-mail{
 			background-color: $brand-good;
+		}
+	}
+
+	&-holder{
+			
+
+		
+		&--open{
+
+			position: fixed;
+			top:0;
+			left:0;
+			bottom:0;
+			right:0;
+			background-color: $brand-cave;
+			z-index:$zindex-navbar-fixed;
 		}
 	}
 }
